[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lyntrpy"
version = "1.0.0"
description = "A api wrapper for lyntr`s api in python"
readme = "README.md"
authors = [{name = "PlOszukiwacz", email="ploszukiwacz1@gmail.com"}]
dependencies = [
  "python-dotenv",
  "requests"
]
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/PlOszukiwaczDEV/lyntrpy"
Issues = "https://github.com/PlOszukiwaczDEV/lyntrpy/issues"